# ModularCppFramework

./: .gitignore  CHANGELOG.md  CLA.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE-COMMERCIAL.txt  README.md  conanfile.py  generate_docs.sh  portfile.cmake  usage  vcpkg.json
.github/workflows/: ci.yml
cmake/: MCFApplicationGenerator.cmake  MCFPackaging.cmake  MCFPluginGenerator.cmake  ModularCppFrameworkConfig.cmake.in  ModularCppFrameworkConfigVersion.cmake.in  README.md  package-headers.sh
cmake/examples/: README.md
cmake/templates/: Application.gitignore.in  ApplicationCMakeLists.txt.in  ApplicationREADME.md.in  Application_config.json.in  Application_main.cpp.in  Plugin.cpp.in  PluginCMakeLists.txt.in  PluginREADME.md.in
core/: Application.hpp  CMakeLists.txt  ConfigurationManager.hpp  DependencyResolver.hpp  EventBus.hpp  FileSystem.hpp  FileWatcher.hpp  IEventDriven.hpp  IModule.hpp  IPlugin.hpp  IRealtimeUpdatable.hpp  JsonParser.hpp  JsonValue.hpp  Logger.hpp  PluginContext.hpp  PluginLoader.hpp  PluginManager.hpp  PluginMetadata.hpp  ResourceManager.hpp  ServiceLocator.hpp  ThreadPool.hpp
docs/: EXAMPLES.md  HOT_RELOAD.md  IMPLEMENTATION.md  PACKAGING.md  QUICK_START.md  README.md  TEST_COVERAGE.md
docs/development/: BUILD.md  CROSS_PLATFORM.md  PACKAGING.md  README.md  TEST_COVERAGE.md  TOOLS_TESTING.md
docs/sdk/: APPLICATION_PACKAGING.md  ARCHITECTURE.md  CONFIGURATION_GUIDE.md  EXAMPLES.md  INSTALLATION.md  PLUGIN_GUIDE.md  QUICK_START.md  README.md  USAGE.md
docs/sdk/generators/: APPLICATION_GENERATOR.md  INDEX.md  PLUGIN_GENERATOR.md  QUICKSTART.md  README.md
examples/: event_driven_app_example.cpp  filesystem_example.cpp  hot_reload_demo.cpp  logger_example.cpp  profiling_example.cpp  realtime_app_example.cpp
examples/networking/: CMakeLists.txt  client_example.cpp  server_example.cpp
modules/: CMakeLists.txt
modules/logger/: CMakeLists.txt  LoggerModule.hpp  README.md
modules/networking/: CMakeLists.txt  NetworkConfig.hpp  NetworkingModule.cpp  NetworkingModule.hpp  NetworkingTypes.hpp  README.md  TcpClient.cpp  TcpClient.hpp  TcpServer.cpp  TcpServer.hpp
modules/profiling/: CMakeLists.txt  MetricsCollector.cpp  MetricsCollector.hpp  ProfilingConfig.hpp  ProfilingMacros.hpp  ProfilingModule.cpp  ProfilingModule.hpp  ProfilingTypes.cpp  ProfilingTypes.hpp
modules/realtime/: CMakeLists.txt  RealtimeModule.cpp  RealtimeModule.hpp
plugins/: CMakeLists.txt
plugins/example_plugin/: CMakeLists.txt  ExamplePlugin.cpp
plugins/hot_reload_example/: CMakeLists.txt  HotReloadExamplePlugin.cpp
tests/: CMakeLists.txt  CMakeLists_catch2.txt  test_config.cpp  test_logger.cpp
tests/integration/: test_app.cpp  test_config_hot_reload.cpp  test_error_recovery.cpp  test_hot_reload.cpp  test_hot_reload_real_plugin.cpp  test_plugin_communication.cpp  test_plugin_manager.cpp  test_stress.cpp
tests/unit/: test_application.cpp  test_dependency_resolver.cpp  test_eventbus.cpp  test_eventbus_edge_cases.cpp  test_file_watcher.cpp  test_filesystem.cpp  test_json_parser_edge_cases.cpp  test_logger_edge_cases.cpp  test_logger_module.cpp  test_module.cpp  test_plugin_loader.cpp  test_plugin_loader_edge_cases.cpp  test_plugin_manager_edge_cases.cpp  test_resource_manager.cpp  test_service_locator.cpp  test_thread_pool.cpp  test_tools_scripts.cpp
tools/: README.md  create-application.py  create-application.sh  create-plugin.py  create-plugin.sh  package-application.py  package-application.sh
